# everspring-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Jenkinsfile  PROJECT_CONTEXT.md  README.md  compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
.playwright-mcp/: page-2026-04-03T12-45-30-159Z.yml  page-2026-04-03T12-46-26-277Z.yml  page-2026-04-03T12-47-04-582Z.yml  page-2026-04-03T12-47-14-780Z.yml  page-2026-04-03T12-50-06-365Z.yml  page-2026-04-03T12-50-38-780Z.yml  page-2026-04-03T12-50-55-289Z.yml  page-2026-04-03T12-51-07-141Z.yml  page-2026-04-03T12-52-03-603Z.yml  page-2026-04-03T12-53-10-325Z.yml  page-2026-04-03T12-53-27-338Z.yml  page-2026-04-03T12-55-59-621Z.yml  page-2026-04-03T12-56-13-543Z.yml  page-2026-04-03T12-56-35-119Z.yml  page-2026-04-03T12-57-41-623Z.yml  page-2026-04-03T12-58-17-161Z.yml  page-2026-04-03T12-58-31-534Z.yml  page-2026-04-03T13-00-31-704Z.yml  page-2026-04-03T13-02-35-258Z.yml  page-2026-04-03T13-02-57-113Z.yml  page-2026-04-03T13-03-05-243Z.yml  page-2026-04-03T13-04-04-448Z.yml
config/: module_submodule_urls.csv  submodules.json
docs/: setup.md
infrastructure/: main.tf  variables.tf
infrastructure/ecs-fargate/: main.tf  outputs.tf  variables.tf
scripts/: profile_init.py  run_scrape_matrix.py
src/: __init__.py
src/everspring_mcp/: __init__.py  main.py  test_search.py
src/everspring_mcp/cli/: __init__.py  index.py  ingest.py  mcp.py  model_cache.py  scrape.py  sync.py  utils.py
src/everspring_mcp/http/: __init__.py  serve_http.py
src/everspring_mcp/mcp/: __init__.py  client.py  dev_server.py  models.py  prompt.py  server.py  terminal_search.py  test_server.py  tools.py
src/everspring_mcp/models/: __init__.py  base.py  content.py  metadata.py  spring.py  sync.py
src/everspring_mcp/scraper/: __init__.py  browser.py  discovery.py  exceptions.py  github_ingester.py  parser.py  pipeline.py  registry.py
src/everspring_mcp/storage/: __init__.py  repository.py  schema.py
src/everspring_mcp/sync/: __init__.py  config.py  orchestrator.py  s3_sync.py
src/everspring_mcp/utils/: __init__.py  logging.py  text.py
src/everspring_mcp/vector/: __init__.py  bm25_index.py  chroma_client.py  chunking.py  config.py  embeddings.py  indexer.py  retriever.py
tests/: conftest.py  test_cli_index_bm25.py  test_cli_model_cache.py  test_cli_sync_manifest_prime.py  test_github_ingester.py  test_http_serve_http.py  test_mcp.py  test_mcp_sdk_server.py  test_scraper_browser.py  test_scraper_discovery.py  test_scraper_parser.py  test_scraper_pipeline.py  test_storage.py  test_sync_orchestrator.py  test_sync_s3_sync.py  test_vector_config.py  test_vector_indexer.py  test_vector_retriever.py
