[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everspring-mcp"
version = "0.1.0"
description = "MCP server providing LLMs with real-time Spring documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alper Karaca" }
]
keywords = ["mcp", "spring", "documentation", "rag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "chromadb>=0.4.0",
    "boto3>=1.28.0",
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "lxml>=4.9.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=2.7.0",
    "aiosqlite>=0.19.0",
    "rank-bm25>=0.2.2",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "boto3-stubs[s3]>=1.28.0",
    "moto[s3]>=4.2.0",
]
amd = [
    "torch; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "extra == 'amd' and sys_platform == 'linux' and platform_machine == 'x86_64'" }]

[project.scripts]
everspring-mcp = "everspring_mcp.mcp.server:run_server"
everspring-client = "everspring_mcp.mcp.terminal_search:run_interactive"

[project.urls]
Homepage = "https://github.com/alpeerkaraca/everspring-mcp"
Repository = "https://github.com/alpeerkaraca/everspring-mcp"
Issues = "https://github.com/alpeerkaraca/everspring-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/everspring_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/everspring_mcp --cov-report=term-missing"

[dependency-groups]
dev = [
    "moto>=5.1.22",
]
